--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,14 @@
           ]
       },
       {
+        "label": "runmain",
+        "type": "shell",
+        "command": "${workspaceRoot}/script/runmain.bat",
+        "problemMatcher": [
+            "$gcc"
+        ]
+    },
+      {
           "label": "build and run",
           "type": "shell",
           "command": "${workspaceRoot}/script/build_and_run.bat",
