set(CMAKE_UNITY_BUILD ON) 编译优化

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_UNITY_BUILD ON)
+
 ADD_SUBDIRECTORY(googletest EXCLUDE_FROM_ALL)
 AUX_SOURCE_DIRECTORY(. SOURCE)
 ADD_EXECUTABLE(helloTest ${SOURCE})
